apnscp theme contrast, fix hidden menu on mobile when collapse enabled

--- a/scss/apnscp/_filetree.scss
+++ b/scss/apnscp/_filetree.scss
@@ -7,7 +7,7 @@ UL.file-manager {
     white-space: nowrap;
   }
   a {
-    color: $text-color;
+    color: $body-color;
     text-decoration: none;
     width:100%;
     background-color: #fff;
